--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scibian-diskless-initramfs-config (5.2) scibian8; urgency=medium
+
+  * Scibian8 rebuild.
+
+ -- Thomas Hamel <thomas-externe.hamel@edf.fr>  Wed, 13 Dec 2017 18:34:39 +0100
+
 scibian-diskless-initramfs-config (5.1) calibre9; urgency=medium
 
   * Specify fs type when mounting tmp partition
