--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scibian-diskless-initramfs-config (5.3) scibian8; urgency=medium
+
+  * Stop all raid volume before initializing disk
+
+ -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Wed, 03 Oct 2018 13:49:50 +0200
+
 scibian-diskless-initramfs-config (5.2) scibian8; urgency=medium
 
   * Scibian8 rebuild.
