--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scibian-diskless-initramfs-config (5.4sci8u1) scibian8; urgency=medium
+
+  * new release 
+
+ -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Fri, 05 Oct 2018 11:21:35 +0200
+
 scibian-diskless-initramfs-config (5.4) scibian8; urgency=medium
 
   * add overlayfs module 
